--- a/style.css
+++ b/style.css
@@ -4,10 +4,17 @@
   box-sizing: border-box;
 }
 body {
+  margin-top: 4px;
   background-color: #f4c531;
 }
 
+.game-title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
 .wrapper {
+  margin-top: 2rem;
   box-sizing: content-box;
   width: 26.87em;
   padding: 2.5em 3em;
@@ -55,7 +62,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 4px solid black;
+  border: 2px solid black;
   transition: transform 0.7s ease-out;
   backface-visibility: hidden;
 }
